--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.unmz.java</groupId>
-    <artifactId>util</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>common-util</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JavaUtil</name>
