--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
     <description>Util project for Java</description>
     <url>https://www.unmz.net</url>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+    </properties>
 
     <licenses>
         <license>
@@ -128,6 +132,9 @@
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
+                                <configuration>
+                                    <additionalparam>-Xdoclint:none</additionalparam>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
