--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>net.unmz.java</groupId>
     <artifactId>unmz-common-util</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.4</version>
     <packaging>jar</packaging>
 
     <name>unmz-common-util</name>
@@ -13,8 +13,9 @@
     <description>Util project for Java</description>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <java.version>1.7</java.version>
+        <default.charset>UTF-8</default.charset>
+        <project.build.sourceEncoding>${default.charset}</project.build.sourceEncoding>
     </properties>
 
     <licenses>
@@ -102,9 +103,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${default.charset}</encoding>
                 </configuration>
             </plugin>
         </plugins>
