--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>net.unmz.java</groupId>
     <artifactId>unmz-common-util</artifactId>
-    <version>1.0.10</version>
+    <version>1.0.11</version>
     <packaging>jar</packaging>
 
     <name>unmz-common-util</name>
@@ -16,8 +16,9 @@
         <java.version>1.7</java.version>
         <default.charset>UTF-8</default.charset>
         <project.build.sourceEncoding>${default.charset}</project.build.sourceEncoding>
+        <maven.nexus.releases.id>SHZX</maven.nexus.releases.id>
+        <maven.nexus.releases.url>http://192.168.1.14:8081/nexus/content/repositories/releases</maven.nexus.releases.url>
     </properties>
-
     <licenses>
         <license>
             <name>MIT License</name>
@@ -112,6 +113,18 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>deploy</id>
+            <properties>
+                <profile-id>deploy</profile-id>
+            </properties>
+            <distributionManagement>
+                <repository>
+                    <id>${maven.nexus.releases.id}</id>
+                    <url>${maven.nexus.releases.url}</url>
+                </repository>
+            </distributionManagement>
+        </profile>
         <profile>
             <id>release</id>
             <build>
