--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <java.version>1.7</java.version>
         <default.charset>UTF-8</default.charset>
         <project.build.sourceEncoding>${default.charset}</project.build.sourceEncoding>
+        <maven.nexus.releases.id>SHZX</maven.nexus.releases.id>
+        <maven.nexus.releases.url>http://192.168.1.14:8081/nexus/content/repositories/releases</maven.nexus.releases.url>
     </properties>
     <licenses>
         <license>
@@ -53,7 +55,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.37</version>
+            <version>1.2.58</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -111,6 +113,18 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>deploy</id>
+            <properties>
+                <profile-id>deploy</profile-id>
+            </properties>
+            <distributionManagement>
+                <repository>
+                    <id>${maven.nexus.releases.id}</id>
+                    <url>${maven.nexus.releases.url}</url>
+                </repository>
+            </distributionManagement>
+        </profile>
         <profile>
             <id>release</id>
             <build>
