--- a/pom.xml
+++ b/pom.xml
@@ -80,10 +80,17 @@
             <artifactId>xstream</artifactId>
             <version>1.4.9</version>
         </dependency>
+        <!-- AES -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.51</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.12</version>
         </dependency>
 
     </dependencies>
