--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,14 @@ language: java
 jdk:
   - openjdk8
 
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+
+branches:
+  only:
+    - master
+
 install: true
 
 script: mvn install -DskipTests=true
