--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>${default.charset}</encoding>
+                    <compilerArgument>-XDignore.symbol.file</compilerArgument>
                     <compilerArguments>
                         <verbose/>
                         <bootclasspath>${java.home}/lib/rt.jar${path.separator}${java.home}/lib/jce.jar</bootclasspath>
