--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <xstream.version>1.4.9</xstream.version>
         <bcprov-jdk15on.version>1.51</bcprov-jdk15on.version>
         <cglib.version>3.2.12</cglib.version>
+        <google-zxing.version>3.4.1</google-zxing.version>
     </properties>
     <licenses>
         <license>
@@ -116,6 +117,17 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>${cglib.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>${google-zxing.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>${google-zxing.version}</version>
         </dependency>
 
     </dependencies>
