--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>net.unmz.java</groupId>
     <artifactId>unmz-common-util</artifactId>
-    <version>1.0.25</version>
+    <version>1.0.26-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>unmz-common-util</name>
@@ -35,6 +35,7 @@
         <bcprov-jdk15on.version>1.51</bcprov-jdk15on.version>
         <cglib.version>3.2.12</cglib.version>
         <google-zxing.version>3.4.1</google-zxing.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
     </properties>
     <licenses>
         <license>
@@ -128,6 +129,12 @@
             <groupId>com.google.zxing</groupId>
             <artifactId>javase</artifactId>
             <version>${google-zxing.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation-api.version}</version>
         </dependency>
 
     </dependencies>
