--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>1.8</java.version>
         <default.charset>UTF-8</default.charset>
 
+	    <maven-deploy.version>2.8</maven-deploy.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
         <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
@@ -158,6 +159,11 @@
 
     <build>
         <plugins>
+	        <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-deploy-plugin</artifactId>
+		        <version>${maven-deploy.version}</version>
+	        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
