--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>net.unmz.java</groupId>
     <artifactId>unmz-common-util</artifactId>
-    <version>1.0.26-SNAPSHOT</version>
+    <version>1.0.26</version>
     <packaging>jar</packaging>
 
     <name>unmz-common-util</name>
